# rag-application

./: README.md  pyproject.toml
app/: rag_chain.py  rag_chain_langserve.txt  server.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
rag-data-loader/: rag_load_and_process.py
